# serka

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
src/serka/: cli.py  project.py
src/serka/new_project/: init.py  new.py
src/serka/utils/: pip_utils.py
