[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serka"
version = "0.1"
authors = [{name = "Shlomo Ballew", email = "gavib18@gmail.com"}]
description = "Python Scaffolding Tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3"
]
dependencies = []
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
serka = "serka.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]